<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.auth.StartFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="75dp"
        app:cardPreventCornerOverlap="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_m"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/txt_view"
            app:layout_constraintEnd_toStartOf="@+id/txt_view"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toTopOf="@+id/txt_view" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="15dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/txt_view"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toEndOf="@+id/txt_view"
            app:layout_constraintTop_toTopOf="@+id/txt_view" />

        <TextView
            android:id="@+id/txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_img_background"
            android:contentDescription="@string/google"
            android:padding="15dp"
            android:src="@drawable/logo_google"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_img_background"
            android:contentDescription="@string/facebook"
            android:padding="15dp"
            android:src="@drawable/logo_facebook"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_sign_in_anonymously"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/login_anonymously"
        android:textSize="@dimen/text_size" />

</LinearLayout>