<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.usersManagement.AccountSettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/return_to"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:src="@drawable/icon_return"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/settings"
            android:textSize="@dimen/text_dialog_size" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/personal_data"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_mini_size" />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_mini_size" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txt_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txt_privacy_status"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:drawablePadding="8dp"
                android:text="@string/privacy_private"
                android:textColor="@color/black"
                android:textSize="@dimen/text_mini_size"
                app:drawableStartCompat="@drawable/icon_password" />

            <TextView
                android:id="@+id/txt_privacy_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch_privacy"

                android:text="@string/privacy_status" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:id="@+id/cv_logout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/login"
               android:textColor="@color/black"
               android:padding="15dp"
               android:textSize="@dimen/text_size"/>

           <TextView
               android:id="@+id/txt_logout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/logout"
               android:textSize="@dimen/text_mini_size"
               android:paddingVertical="10dp"
               android:paddingHorizontal="20sp"
               android:textColor="@color/red"/>

       </LinearLayout>


   </androidx.cardview.widget.CardView>

</LinearLayout>